# CS3364-GroupProject

./: .gitignore  README.md  build.py  meson.build  out.txt  test.py
.github/workflows/: meson-build.yml  meson-test.yml
docs/: README.md
examples/: dense1.graph  small.graph  sparse.graph  sparse1.graph  vary1.graph
includes/: README.md  spinner.hpp
scripts/: README.md  analysis.py
src/: Graph.cpp  Graph.hpp  README.md  graph.cpp  graph.hpp  kruskal.cpp  kruskal.hpp  main.cpp  prim.cpp  prim.hpp
tests/: Catch2.cpp  README.md  test_kruskal_dense.cpp  test_kruskal_sparse.cpp  test_main.cpp  test_prim_dense.cpp  test_prim_sparse.cpp
